--- a/css/style.css
+++ b/css/style.css
@@ -120,20 +120,6 @@ body {
   font-weight: var(--fw-400);
   font-size: var(--fs-14); }
 
-/*
-.flex-row {
-  display: flex;
-  align-items: center;
-}
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  &__align-left {
-    align-items: left;
-  }
-}
-*/
 .header {
   display: flex;
   flex-direction: row;
@@ -141,7 +127,11 @@ body {
   justify-content: space-between;
   padding: 2.4rem 2.4rem 0 2.4rem; }
   .header__logo {
-    height: 2.4rem; }
+    background-image: url("../images/logo.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 2.4rem;
+    width: 8rem; }
   .header__menu {
     display: flex;
     flex-direction: row;
@@ -161,7 +151,16 @@ main,
   align-items: center; }
 
 .cta {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 9.8rem 2.7rem 0 2.7rem; }
+  .cta__image {
+    background-image: url("../images/illustration-1.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 22.5rem;
+    width: 30.4rem; }
   .cta__heading {
     padding: 4rem 0 0 0;
     color: var(--clr-primary-400);
@@ -176,8 +175,23 @@ main,
     text-align: center; }
 
 .productivity {
-  background-color: var(--clr-neutral-200);
-  padding-bottom: 8.1rem; }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 9.1rem; }
+  .productivity::before {
+    content: "";
+    background-image: url("../images/bg-curve-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 5.3rem; }
+  .productivity__background {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--clr-neutral-200);
+    padding-bottom: 8.1rem; }
   .productivity__image {
     padding: 9.3rem 2.7rem 0 2.7rem; }
   .productivity__heading {
@@ -197,25 +211,40 @@ main,
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    padding: 3.6rem 12.3rem 0 12.3rem;
+    margin: 3.6rem 0 4.6rem 0;
+    width: 13rem;
     color: var(--clr-accent-moderate-cyan);
     font-size: var(--fs-12);
-    line-height: 1.634rem; }
+    line-height: 1.634rem;
+    border-bottom: 1px solid var(--clr-accent-moderate-cyan); }
+    .productivity__link--icon {
+      background-image: url("../images/icon-arrow.svg");
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 1.2rem;
+      height: 1.2rem;
+      margin-left: 0.8rem; }
 
 .testimonial {
   background-color: var(--clr-neutral-100);
   margin: 4rem 4.7rem 0rem 4.8rem;
   padding: 0.944rem 1.274rem 1.862rem 2.596rem;
   border-radius: 0.4rem; }
+  .testimonial__image {
+    margin: 1.2rem 0; }
   .testimonial__paragraph {
     font-size: var(--fs-10);
     line-height: 1.81rem;
-    letter-spacing: 0.038rem; }
+    letter-spacing: 0.038rem;
+    margin-bottom: 1.2rem; }
   .testimonial__profile {
     display: flex;
     flex-direction: row;
     align-items: left; }
+    .testimonial__profile--image {
+      border-radius: 50%;
+      width: 2.4rem;
+      margin-right: 0.75rem; }
     .testimonial__profile--name {
       font-weight: var(--fw-700);
       font-size: var(--fs-9);
@@ -243,12 +272,19 @@ main,
 
 .footer {
   width: 100%;
-  padding: 6.5rem 11.4rem 4.2rem 3.9rem;
   background-color: var(--clr-primary-400);
   font-size: var(--fs-16);
   color: var(--clr-neutral-100);
   line-height: 2.4rem; }
+  .footer__top {
+    padding: 6.5rem 0 3.2rem 3.9rem; }
   .footer__logo {
+    -webkit-mask: url("../images/logo.svg") no-repeat 100% 100%;
+    mask: url("../images/logo.svg") no-repeat 100% 100%;
+    -webkit-mask-size: cover;
+    mask-size: cover;
+    background-color: var(--clr-neutral-100);
+    width: 10.5rem;
     height: 3rem; }
   .footer__contact {
     display: flex;
@@ -274,7 +310,33 @@ main,
   .footer__social {
     display: flex;
     flex-direction: row;
-    align-items: center; }
+    align-items: center;
+    justify-content: center;
+    padding: 0 0 4.2rem 0; }
+    .footer__social--item {
+      background-repeat: no-repeat;
+      background-position: center;
+      border-radius: 50%;
+      border: 1px solid var(--clr-neutral-100);
+      width: 2.8rem;
+      height: 2.7rem;
+      padding: 1.5rem; }
+      .footer__social--item:nth-of-type(1) {
+        background-image: url("../images/facebook.svg");
+        width: 0.609rem;
+        height: 1.282rem; }
+      .footer__social--item:nth-of-type(2) {
+        background-image: url("../images/twitter.svg");
+        width: 1.759rem;
+        height: 1.755rem;
+        margin: 0 0.984rem; }
+      .footer__social--item:nth-of-type(3) {
+        background-image: url("../images/instagram.svg");
+        width: 1.273rem;
+        height: 1.271rem; }
+
+.form {
+  width: 100%; }
 
 .form__input,
 .form__button {
@@ -285,7 +347,7 @@ main,
   font-family: var(--font-raleway); }
 
 .form__input {
-  border: 1px solid var(--clr-primary-400); }
+  border: 0.63px solid var(--clr-primary-400); }
   .form__input--signup {
     width: 85.71%;
     height: 3.2rem;
