--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,26 +4,16 @@
   align-items: $align-items;
 }
 
-/*
-.flex-row {
-  display: flex;
-  align-items: center;
-}
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  &__align-left {
-    align-items: left;
-  }
-}
-*/
 .header {
   @include flex(row, center);
   justify-content: space-between;
   padding: 2.4rem 2.4rem 0 2.4rem;
   &__logo {
+    background-image: url("../images/logo.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
     height: 2.4rem;
+    width: 8rem;
   }
   &__menu {
     @include flex(row, center);
@@ -45,8 +35,14 @@ main,
 }
 
 .cta {
+  @include flex(column, center);
   padding: 9.8rem 2.7rem 0 2.7rem;
   &__image {
+    background-image: url("../images/illustration-1.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 22.5rem;
+    width: 30.4rem;
   }
   &__heading {
     padding: 4rem 0 0 0;
@@ -65,8 +61,23 @@ main,
 }
 
 .productivity {
-  background-color: var(--clr-neutral-200);
-  padding-bottom: 8.1rem;
+  @include flex(column, center);
+  margin-top: 9.1rem;
+
+  &::before {
+    content: "";
+    background-image: url("../images/bg-curve-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 5.3rem;
+  }
+
+  &__background {
+    @include flex(column, center);
+    background-color: var(--clr-neutral-200);
+    padding-bottom: 8.1rem;
+  }
 
   &__image {
     padding: 9.3rem 2.7rem 0 2.7rem;
@@ -88,12 +99,20 @@ main,
   }
   &__link {
     @include flex(row, center);
-    justify-content: center;
-    padding: 3.6rem 12.3rem 0 12.3rem;
+    margin: 3.6rem 0 4.6rem 0;
+    width: 13rem;
     color: var(--clr-accent-moderate-cyan);
     font-size: var(--fs-12);
     line-height: 1.634rem;
+    border-bottom: 1px solid var(--clr-accent-moderate-cyan);
+
     &--icon {
+      background-image: url("../images/icon-arrow.svg");
+      background-position: center;
+      background-repeat: no-repeat;
+      width: 1.2rem;
+      height: 1.2rem;
+      margin-left: 0.8rem;
     }
   }
 }
@@ -104,15 +123,20 @@ main,
   padding: 0.944rem 1.274rem 1.862rem 2.596rem;
   border-radius: 0.4rem;
   &__image {
+    margin: 1.2rem 0;
   }
   &__paragraph {
     font-size: var(--fs-10);
     line-height: 1.81rem;
     letter-spacing: 0.038rem;
+    margin-bottom: 1.2rem;
   }
   &__profile {
     @include flex(row, left);
     &--image {
+      border-radius: 50%;
+      width: 2.4rem;
+      margin-right: 0.75rem;
     }
     &--name {
       font-weight: var(--fw-700);
@@ -149,12 +173,21 @@ main,
 
 .footer {
   width: 100%;
-  padding: 6.5rem 11.4rem 4.2rem 3.9rem;
   background-color: var(--clr-primary-400);
   font-size: var(--fs-16);
   color: var(--clr-neutral-100);
   line-height: 2.4rem;
+  &__top {
+    padding: 6.5rem 0 3.2rem 3.9rem;
+  }
+
   &__logo {
+    -webkit-mask: url("../images/logo.svg") no-repeat 100% 100%;
+    mask: url("../images/logo.svg") no-repeat 100% 100%;
+    -webkit-mask-size: cover;
+    mask-size: cover;
+    background-color: var(--clr-neutral-100);
+    width: 10.5rem;
     height: 3rem;
   }
   &__contact {
@@ -181,5 +214,34 @@ main,
   }
   &__social {
     @include flex(row, center);
+    justify-content: center;
+    padding: 0 0 4.2rem 0;
+
+    &--item {
+      background-repeat: no-repeat;
+      background-position: center;
+      border-radius: 50%;
+      border: 1px solid var(--clr-neutral-100);
+      width: 2.8rem;
+      height: 2.7rem;
+      padding: 1.5rem;
+
+      &:nth-of-type(1) {
+        background-image: url("../images/facebook.svg");
+        width: 0.609rem;
+        height: 1.282rem;
+      }
+      &:nth-of-type(2) {
+        background-image: url("../images/twitter.svg");
+        width: 1.759rem;
+        height: 1.755rem;
+        margin: 0 0.984rem;
+      }
+      &:nth-of-type(3) {
+        background-image: url("../images/instagram.svg");
+        width: 1.273rem;
+        height: 1.271rem;
+      }
+    }
   }
 }
